infrastructure/vault/overlays/rackspace/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vault
  namespace: vault
spec:
  tls:
    - hosts:
        - vault.quybits.com
      secretName: vault-tls
  rules:
    - host: vault.quybits.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vault-ui
                port:
                  number: 8200
